# order-book

./: .gitignore  Bot.cpp  Bot.h  CMakeLists.txt  CustomerRequestQueue.cpp  CustomerRequestQueue.h  LICENSE  Market.cpp  Market.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderLinkedList.cpp  README.md  RandomClient.cpp  RandomClient.h  display_client.cpp  main.cpp  randomOrderGeneratorClient.cpp  random_order_generator_client.cpp  simulation.sh  simulation_10_seconds.sh  simulation_debug.sh
database/: DatabaseInterface.cpp  DatabaseInterface.h
lock_free_queue/: LockFreeQueue.cpp  LockFreeQueue.h
market/: CustomerRequestQueue.cpp  CustomerRequestQueue.h  GeneratorID.cpp  GeneratorID.h  GeneratorId.cpp  GeneratorId.h  Market.cpp  Market.h  MarketClient.cpp  MarketClient.h  MarketServer.cpp  MarketServer.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderLinkedList.cpp  OrderLinkedList.h
market/CustomerRequestQueue/: CustomerRequestQueue.cpp  CustomerRequestQueue.h  RequestNode.cpp  RequestNode.h
market/order/: Order.cpp  Order.h  OrderBase.cpp  OrderBase.h  OrderClient.cpp  OrderClient.h
proto/: MarketAccess.proto
server_and_client_grpc/: ServiceImplementation.cpp  ServiceImplementation.h
server_and_client_grpc/Client/: ClientAsync.cpp  ClientAsync.h  ClientAsyncImplementation.cpp  ClientAsyncImplementation.h  ClientOrdersInOrderbook.cpp  ClientOrdersInOrderbook.h  OrdersInClientOrderbook.cpp  OrdersInClientOrderbook.h  RandomOrderGeneratorClientImplementation.cpp  RandomOrderGeneratorClientImplementation.h  RandomizerClient.cpp  RandomizerClient.h
server_and_client_grpc/Client/DisplayClient/: DisplayClient.cpp  DisplayClient.h
server_and_client_grpc/Client/RandomizerClient/: OrderClient.cpp  OrderClient.h  OrdersInClientOrderbook.cpp  OrdersInClientOrderbook.h  RandomizerClient.cpp  RandomizerClient.h
server_and_client_grpc/Server/: Server.cpp  Server.h
server_and_client_grpc/Service/: RequestHandler.cpp  RequestHandler.h  RpcServiceAsync.h  ServiceAsync.cpp  ServiceAsync.h  ServiceAsyncImplementation.cpp  ServiceAsyncImplementation.h
server_and_client_grpc/running_server_function/: RunningServer.cpp  RunningServer.h
server_and_client_zero_mq/: publisher.h
server_and_client_zero_mq/Message/: Message.cpp  Message.h
